# cboard_demo

./: .gitmodules  .mxproject  CMakeLists.txt  cboard.ioc  openocd.cfg
Inc/: stm32f4xx_it.h
Src/: freertos.c  gpio.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c
applications/: buzzer_task.cpp  can_task.cpp  control_task.cpp  imu_task.cpp  led_task.cpp  plot_task.cpp  uart_task.cpp
cmake/stm32cubemx/: CMakeLists.txt
